--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>com.google.appengine</groupId>
+				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.9</version>
+				<version>2.4.4</version>
 			</plugin>
 		</plugins>
 	</build>
